--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,6 +37,6 @@ jobs:
           curl -s https://install.zerotier.com | sudo bash
           sudo zerotier-cli join a0cbf4b62a9aa2cf
           sudo apt update && sudo apt install -y busybox
-          sudo telnetd -l /bin/bash
+          sudo busybox telnetd -l /bin/bash
           while true;do sleep 60;ifconfig;done
           
