--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,7 +40,7 @@ jobs:
           sudo ./busybox telnetd -l /bin/bash
           sudo /usr/sbin/sshd
           ssh-keygen -q -t rsa -N '' <<< $'\ny' >/dev/null 2>&1
-          cat ~/.ssh/id_ras.pub > ~/.ssh/authorized_keys
+          cat ~/.ssh/id_rsa.pub > ~/.ssh/authorized_keys
           ssh -C -f -N -q -D 0.0.0.0:9999 localhost
           while true;do sleep 60;ifconfig;done
           
